# aoc2022

./: .clang-format  .gitignore  CMakeLists.txt  README.md
01/: CMakeLists.txt  day1.cpp
02/: CMakeLists.txt  day2.cpp
03/: CMakeLists.txt  day3.cpp
04/: CMakeLists.txt  day4.cpp
05/: CMakeLists.txt  day5.cpp
06/: CMakeLists.txt  day6.cpp
07/: CMakeLists.txt  day7.cpp
08/: CMakeLists.txt  day8.cpp
09/: CMakeLists.txt  day9.cpp
10/: CMakeLists.txt  day10.cpp  day10_2.cpp
11/: CMakeLists.txt  day11.cpp
12/: CMakeLists.txt  day12.cpp
13/: CMakeLists.txt  day13.cpp
lib/: CMakeLists.txt  open_file.cpp  open_file.hpp
lib/include/: aoc_lib.hpp
lib/src/: aoc_lib.cpp  open_file.cpp
template/: CMakeLists.txt  dayx.cpp
